fiddle with flex to make sure sources remain visible

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -60,7 +60,7 @@ html, body {
 }
 
 .sources-list {
-  flex: 0 20 auto;
+  flex: 0 1 auto;
 }
 
 .slider-label {
